[package]
name = "swc-plugin-raw-import"
version = "1.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# 最大化单元内的优化，可能导致更好的整体性能，但也会增加编译时间
codegen-units = 1
# 跨 crate 优化可以显著提升性能，并减少二进制文件体积
lto = true
# 启用所有优化，特别是针对运行时性能的优化，会导致更大的二进制文件
opt-level = 3
# 剥离掉调试符号，只保留必要的符号。不会直接提升性能，但可以减少可执行文件的大小，有助于减少加载时间
strip = "symbols"

[dependencies]
swc_core = { version = "52.0.0", features = ["ecma_plugin_transform", "__parser"] }
serde = { version = "1.0.228", features = ["derive"] }
path-clean = "1.0.1"
serde_json = "1.0.145"

[dev-dependencies]
swc_core = { features = ["testing_transform"], version = "52.0.0" }
